bin_PROGRAMS = o2em2
o2em2_SOURCES = audio.c cpu.c cset.c score.c timefunc.c vmachine.c vpp.c bios.c crc32.c keyboard.c main.c roms.c table.c vdc.c voice.c vpp_cset.c o2em_sdl.c audio.h bios.h cpu.h crc32.h cset.h keyboard.h o2em2.h o2em_sdl.h roms.h score.h table.h timefunc.h vdc.h vmachine.h vpp.h voice.h vpp_cset.h types.h
EXTRA_DIST = O2EM.TXT LICENSE.TXT changelog.txt
